fixed the database issue

--- a/langoal/langoal/src/main/resources/application.properties
+++ b/langoal/langoal/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/langoal?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/langoal
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MariaDBDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.thymeleaf.cache=false
