implemented payment, chat, delete account, read user info

--- a/langoal/langoal/src/main/resources/application.properties
+++ b/langoal/langoal/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
+
+paypal.mode=sandbox
+paypal.client.id=AfAwMBGv5d_YBSC4TPLNqTghsm8tb7xl5te_rSuv6TxlgHN8F9zv1lT7M0ICuCERKig9pXtksfrKxbcJ
+paypal.client.secret=EOaMAuRj8pL4UDnmGPPtsxk_pn7Bbv7ztXfedGCHCtN7Ht-SjLfZqjeLEcLE_qteGbtHBE10zBYZv2lW
